--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 @media only screen and (min-width: 768px) {
   #back {
-      background-image: url("assets/BG\ drk.png");
+      background-image: url("assets/BG\ drk.jpg");
       min-height: 100vh;
       background-size: cover;
       background-repeat: repeat;
@@ -23,7 +23,7 @@
 
 @media only screen and (max-width: 768px) {
   #back {
-      background-image: url("assets/BG\ drk.png");
+      background-image: url("assets/BG\ drk.jpg");
       min-height: 100vh;
       background-size: cover;
       background-repeat: repeat;
